--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "downscalePercent": 100
   },
   "propertiesInDocument": "visible",
-  "showRibbon": true,
   "showUnsupportedFiles": true,
-  "spellcheck": false
+  "spellcheck": true,
+  "newFileLocation": "current"
 }
