--- a/appearance.json
+++ b/appearance.json
@@ -11,7 +11,10 @@
     "Colour",
     "Noah Shit",
     "BulletsPDF",
-    "folder icons"
+    "folder icons",
+    "Callouts",
+    "file-colour",
+    "Highlight"
   ],
   "showRibbon": true
 }
